events-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: events-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: events-service
  template:
    metadata:
      labels:
        app: events-service
    spec:
      containers:
        - name: events-service
          image: events-service:latest        # nom de ton image Docker
          imagePullPolicy: Never              # utilise l'image locale Minikube
          ports:
            - containerPort: 8000
