events-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: events-service
spec:
  selector:
    app: events-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
